--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@angular/core": "^19.0.6",
     "@angular/forms": "^19.0.6",
     "@angular/platform-browser": "^19.0.6",
+    "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.0.6",
     "rxjs": "^7.8.1",
     "tslib": "^2.5.0",
